# CANdle-SDK

./: .clang-format  .clangd  .gitignore  .gitmodules  AK80_6_104_read.cfg  AK80_9_101_read.cfg  AK80_9_105_read.cfg  CMakeLists.txt  Doxyfile  EX8108.bash  EX8108_homing.bash  GL40_105_read.cfg  README.md  create_deb_file.sh  git_func.cmake  imgui.ini  pyproject.toml
CANdle_lib/: .gitignore  CMakeLists.txt
CANdle_lib/launch/: 99-candle.rules  99-mab-candle.rules
CANdle_lib/src/: main.cpp  main.hpp
CANdle_lib/src/BusHandler/: IBusHandler.cpp  IBusHandler.hpp  UsbHandler.cpp  UsbHandler.hpp
CANdle_lib/src/Candle/: Candle.cpp  Candle.hpp
CANdle_lib/src/CircularBuffer/: CircularBuffer.hpp
CANdle_lib/src/Commons/: Barrier.hpp  BitCast.hpp  CircularBuffer.hpp  Deserializer.hpp
CANdle_lib/src/Communication/: Candle.cpp  Candle.hpp  CandleInterface.cpp  CandleInterface.hpp  ICommunication.hpp
CANdle_lib/src/MD80/: MD80.cpp  MD80.hpp  MD80_DS402.eds
Examples/: CMakeLists.txt  haptic.cpp  high_spped_com.cpp  multiMD80.cpp  routinesTest.cpp  simple_movement.cpp  synchro.cpp  two_candle.cpp  velocityPID.cpp
MDtool/: CMakeLists.txt
MDtool/configs/: AK10-9_CM.cfg  AK10-9_brake.cfg  AK80-6.cfg  AK80-9.cfg  EX8108.cfg  EX8108_homing.cfg  MN4004.cfg  factory.cfg
MDtool/configs/eds/: MD80_latest.eds
MDtool/launch/: launch.bat
MDtool/src/: main.cpp  mdtool.cpp  mdtool.hpp
MDtool/src/ConfigParser/: ConfigParser.hpp
MDtool/test/: BinaryParserTest.cpp  CMakeLists.txt  ConfigParserTest.cpp
MDtool/test/BinaryParserFiles/: testFailWrongTag.mab
MDtool/test/TestFiles/: EX8108.cfg  EX8108_missing_fields.cfg  EX8108_wrong_numeric_values.cfg  EX8108_wrong_values.cfg  testFailWrongChecksum.mab
candlegui/: CMakeLists.txt  Makefile.old  imgui.ini  main.cpp  main.h
candlegui/lib/: CMakeLists.txt  imgui.cpp
candlegui/src/: mainWindow.cpp  mainWindow.hpp
candlelib/: CMakeLists.txt
candlelib/cmake/: candleConfig.cmake.in
candlelib/cmake/modules/: Findlibusb.cmake
candlelib/include/: MD.hpp  bus.hpp  candle.hpp  candle_protocol.hpp  candle_types.hpp  candlelib.hpp  crc.hpp  mab_types.hpp  md80.hpp  pds.hpp  pds_module.hpp  pds_protocol.hpp  pds_types.hpp  register.hpp  spiDevice.hpp  tsdeque.hpp  uartDevice.hpp  usbDevice.hpp
candlelib/include/candle/: candlelib.hpp  crc.hpp
candlelib/src/: bus.cpp  candle.cpp  crc.cpp  md80.cpp  pds.cpp  pds_module.cpp  pds_protocol.cpp  register.cpp  register_tests.cpp  spiDevice.cpp  uartDevice.cpp  usbDevice.cpp
candlelib/src/MD/: MD.cpp  MD.fwd.hpp  MD.hpp  MDCO.cpp  MDCO.hpp  MDCO_test.cpp  MDStatus.hpp  MD_aggregator.cpp  MD_aggregator.hpp  MD_aggregator_test.cpp  MD_strings.hpp  MD_test.cpp
candlelib/src/can_bootloader/: can_bootloader.cpp  can_bootloader.hpp
candlelib/src/communication_device/: I_communication_device.hpp  candle.cpp  candle.hpp  candle_bootloader.cpp  candle_bootloader.hpp  candle_bootloader_test.cpp  candle_frame_adapter.cpp  candle_frame_adapter.hpp  candle_frame_adapter_test.cpp  candle_test.cpp  candle_types.hpp  candle_v2.cpp  candle_v2.hpp  candle_v2_test.cpp  i_communication_device.h  spi_device.h  usb_device.h
candlelib/src/communication_interface/: I_communication_interface.hpp  I_communication_interface_mock.hpp  SPI.cpp  SPI.hpp  SPI_v2.cpp  SPI_v2_test.cpp  USB.cpp  USB.hpp  USB_test.cpp  USB_v2.cpp  USB_v2.hpp  USB_v2_test.cpp
candlelib/src/communication_pipe/: receiver_pipe.cpp  receiver_pipe.h  thread_safe_queue.h  transmitter_pipe.cpp  transmitter_pipe.h
candlelib/test/: CMakeLists.txt  pds_protocol_test.cpp  test.cpp
candletool/: CMakeLists.txt  README.md  testInstallFile.txt
candletool/deb/: control
candletool/doc/: MDdoc.md
candletool/include/: BinaryParser.hpp  I_file_handler.hpp  OD.hpp  canLoader.cpp  canLoader.hpp  canUpdater.hpp  candle_cli.hpp  candletool.hpp  candletoolCO.hpp  checksum.hpp  configHelpers.hpp  conversionHelpers.hpp  curl_handler.hpp  edsParser.hpp  file_handler.hpp  iLoader.hpp  mabFileParser.hpp  mab_crc.hpp  md_cfg_map.hpp  md_cli.hpp  mdco_cfg_map.hpp  mdco_cli.hpp  mdco_config_adapter.hpp  pds_cli.hpp  ui.hpp  uploader.hpp  usbLoader.hpp  utilities.hpp
candletool/objectDictionary/: OD.cpp  OD.hpp
candletool/src/: BinaryParser.cpp  OD.cpp  canLoader.cpp  canUpdater.cpp  candle_cli.cpp  candletool.cpp  candletoolCO.cpp  checksum.cpp  curl_handler.cpp  edsParser.cpp  mabFileParser.cpp  mab_crc.cpp  main.cpp  md_cli.cpp  mdco_cli.cpp  mdco_config_adapter.cpp  pds_cli.cpp  test.cfg  ui.cpp  uploader.cpp  usbLoader.cpp  utilities.cpp
candletool/template_package/: postinst
candletool/test/: CMakeLists.txt  test.cpp
examples/: CMakeCache.txt  CMakeLists.txt  dqmap.csv
examples/cpp/: EMC_testing.cpp  EMC_testing_with_pds.cpp  app_template.cpp  eds_example_update_eds_file.cpp  example1.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  example_krzysia.cpp  md_dev_kit_example.cpp  md_dqmaps.cpp  md_encoder.cpp  md_example_async_api.cpp  md_example_diagnostics.cpp  md_example_dual_chanel.cpp  md_example_impedance.cpp  md_example_latency.cpp  md_register_access.cpp  mdco_example_heartbeat.cpp  mdco_example_id_motor_detection.cpp  mdco_example_impedance.cpp  mdco_example_impedance_2.cpp  mdco_example_read_write_register.cpp  mdco_example_speed_loop.cpp  nameCheck.cpp  pds_basic_example.cpp  pds_example1.cpp  pds_example2.cpp  pds_example3.cpp  (+24 more)
examples/py/: example12.py  example3.py  md_decoupling.py  md_dqUseDqMaps.py  md_dqdirect.py  md_dqmaps.py  md_impedance.py  md_impledance.py  mdco_heartbeat.py  mdco_impedance.py  mdco_motor_detection.py  mdco_read_write_register.py  mdco_speed_loop.py  pds_example_basic.py
examples/unit_test/: ut_example.cpp
mdtool/: CMakeLists.txt  update_mdtool.sh
mdtool/include/: configHelpers.hpp  mainWorker.hpp  mdtool.hpp  ui.hpp
mdtool/src/: ConfigManager.cpp  main.cpp  mainWorker.cpp  mdtool.cpp  ui.cpp
mdtool/test/: ConfigManagerTest.cpp
(+332 files in other folders)
