[build-system]
requires = [
    "scikit-build-core", "pybind11", "wheel", "make", "cmake", "cibuildwheel", "libusb"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyCandleMAB"
version = "1.5.1"
authors = [
  {name = "Paweł Korsak", email = "support.md80@mabrobotics.pl"},
]
description = "Python package for controlling MD80-based actuators"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
sdist.include = [".git"]
sdist.exclude = ["build"]

[tool.scikit-build.cmake.define]
PYTHON_BUILD = "ON"

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = "cp36-*"
