[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "wheel",
    "make",
    "cmake",
    "cibuildwheel",
    "libusb"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyCandleMAB"
version = "2.0.0"
dependencies = ["cmake"]
requires-python = ">= 3.11"
authors = [{ name = "MAB Robotics", email = "support@mabrobotics.pl" }]
maintainers = [{ name = "MAB Robotics", email = "support@mabrobotics.pl" }]
description = "Python package for controlling MD-based actuators"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
sdist.include = [".git","candlelib/third_party"]
cmake.build-type = "Release"
install.strip = false

[tool.scikit-build.cmake.define]
PYTHON_BUILD = "ON"

[tool.cibuildwheel]
build-frontend = "build[uv]"
skip = ["cp38-*", "cp39-*", "cp310-*", "*musllinux*"]
before-build = "yum -y install libusbx-devel && yum -y install libusb-devel"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-build = "apk add libusb-devel"
